@@ -82,7 +82,7 @@ public final class Dispatcher extends Pattern
 	}
 	
 	@Override
-	protected void initialize()
+	protected void onMount()
 	{
 		final Type<?> type = getType();
 		if(!Dispatchable.class.isAssignableFrom(type.getJavaClass()))
