@@ -96,7 +96,7 @@ public final class Schedule extends Pattern
 	}
 	
 	@Override
-	public void initialize()
+	public void onMount()
 	{
 		final Type<?> type = getType();
 		if(!Scheduleable.class.isAssignableFrom(type.getJavaClass()))
